# reponomics-dashboard-action

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CSV_EXPORT.md  Makefile  README.md  SECURITY.md  TODO.md  action.yml  pyproject.toml  requirements-guide-tooling.txt  requirements-runtime.txt  template-action-release.yml  template-contract.yml  template-manifest.yml
.github/: .release-please-manifest.json  CODEOWNERS  dependabot.yml  release-please-config.json  syft-sbom.yaml
dashboard_action/: __init__.py  run.py
demo/: dataset.yml
docs/: ACTIVE_RETENTION_AND_LINEAGE_PLAN.md  ARCHITECTURE.md  ARTIFACT_STORAGE_AND_CLEANUP.md  BAD_RELEASE_REPONSE_RUNBOOK.md  CONSOLIDATED_ARCHITECTURE.md  CSV_EXPORT.md  DASHBOARD_INSIGHT_METHODOLOGY.md  DASHBOARD_NARRATIVE_INSIGHTS.md  DASHBOARD_NARRATIVE_RECIPES.md  DEMO_REPOSITORY.md  DEPENDENCY_MANAGEMENT.md  DOCUMENTATION_INVENTORY.md  FAQ.md  GUIDE_TOOLING_LOCK.md  INCIDENT_RESPONSE.md  MARKETPLACE_PUBLISHING.md  NAMING_CUTOVER_MAP.md  OBSOLETE_DOCS_INVENTORY.md  PRODUCT_PROVENANCE.md  PROVENANCE.md  RELEASE_RUNBOOK.md  RETAINED_DATA_ERD.md  RETAINED_DATA_MIGRATIONS.md  ROADMAP.md  SECURITY_CHECKS.md  SECURITY_INFO.md  STAGING_SMOKE.md  TEMPLATE_RELEASE_PROCESS.md  TESTING.md  TODO.md  VERSIONING_AND_RELEASE.md  marketplace-packaging.md  repo-consolidation-plan.md
scripts/: __init__.py  accept_action_release.py  build_dashboard_guide.py  build_demo_repo.py  build_template.py  capture_dashboard_guide_assets.mjs  check_dashboard_js_smoke.py  dashboard_scenarios.py  enforce_release_policy.py  prepare_template_release.py  publish_demo_repo.py  publish_generated_repo.py  repo_paths.py  scan_action_refs.py  smoke_template_release.py  staging_smoke_browser_checklist.py  staging_smoke_evidence.py  staging_smoke_preflight.py  staging_smoke_provision.py  staging_smoke_reset_fresh.py  staging_smoke_run.py  staging_smoke_seed_plain_history.py  staging_smoke_wait_for_run.py  sync_action_release.py  template_compat_e2e.py  template_consumer_e2e.py  template_contract.py  template_provenance.py  template_public_action_e2e.py  template_release_notes.py  template_workflows.py  update_vendored_assets.py  validate_action_pins.py  validate_release_notice.py  validate_template_action_ref.py  validate_vendored_assets.py  verify_workflow_classification.py
template/: CODE_OF_CONDUCT.template.md  CONTRIBUTING.template.md  README.template.md  SECURITY.template.md  config.example.yaml  config.yaml
tests/: test_accept_action_release.py  test_action_metadata.py  test_crypto_merge_unit.py  test_dashboard_asset_packaging.py  test_dashboard_scenario_snapshots.py  test_demo_repository.py  test_enforce_release_policy.py  test_event_index_unit.py  test_generated_repos.py  test_git_history_unit.py  test_load_data_unit.py  (+13 more)
(+366 files in other folders)
