[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "reponomics-dashboard-action"
version = "0.5.0"  # x-release-please-version
description = "GitHub Action for the Reponomics Dashboard."
readme = "README.md"
authors = [{ "name" = "Reponomics Contributors" }]
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "cryptography>=43.0",
    "requests>=2.28",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "antipasta>=1.1.2",
    "complexipy>=5.4.1",
    "mypy>=1.18",
    "pre-commit>=4.0",
    "pytest>=7.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "types-PyYAML>=6.0.12",
    "types-requests>=2.33.0",
]

[tool.setuptools.packages.find]
include = ["dashboard_action*"]

[tool.mypy]
python_version = "3.11"
files = ["dashboard_action/run.py", "scripts", "tests"]
mypy_path = "dashboard_action/runtime/scripts"
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
